--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "simple-peer": "^9.6.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+	"webrtc-adapter": "^7.2.5"
   },
   "scripts": {
     "start": "NODE_ENV=production node src/server.js",
