--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "express": "^4.17.1",
+    "firebase": "^8.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-social-login-buttons": "^3.1.2",
+    "react-with-firebase-auth": "^1.3.2",
     "simple-peer": "^9.6.2",
     "socket.io": "^2.3.0",
-	"webrtc-adapter": "^7.2.5"
+    "webrtc-adapter": "^7.2.5"
   },
   "scripts": {
     "start": "NODE_ENV=production node src/server.js",
+    "start-dev": "NODE_ENV=development node src/server.js",
     "client": "react-scripts start",
     "server": "node src/server.js",
     "build": "react-scripts build",
@@ -34,7 +38,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version",
-	  "not dead" 
+      "not dead"
     ]
   }
 }
